k8s-templates/default/y-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: y-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - ${FRONT_HOST}
    secretName: y-front-tls
  - hosts:
      - ${BACK_HOST}
    secretName: y-back-tls
  rules:
    - host: ${FRONT_HOST}
      http:
        paths:
          - path: /?${FRONT_BASE_PATH}(?:$|/|(?<=/))(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: y-front
                port:
                  number: ${FRONT_PORT}
    - host: ${BACK_HOST}
      http:
        paths:
          - path: /?${BACK_BASE_PATH}(?:$|/|(?<=/))(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: y-back
                port:
                  number: ${BACK_PORT}
    - host: ${POSTGRES_HOST}
      http:
        paths:
          - path: /?${POSTGRES_BASE_PATH}(?:$|/|(?<=/))(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: y-db
                port:
                  number: ${POSTGRES_PORT}
